<resources>
    <string name="app_name">Android Labs</string>
    <string name="Hello_message">Hello World!</string>
    <string name="ButtonText">I’m a button</string>
    <string name="switch_off">The switch is now OFF</string>
    <string name="switch_on">The switch is now ON</string>
    <string name="toast_message">Here is more Information</string>
    <string name="check_this_out">Check this out!</string>
    <string name="click_here">CLICK HERE</string>
    <string name="switch_on_off">Switch on/off</string>
    <string name="edit_bar">Type here</string>
    <string name="GUI_name">Look at my GUI</string>
    <string name="undo">Undo</string>
    <string name="emailAddress">Enter your email address</string>
    <string name="typeEmail">Type email here</string>
    <string name="typePassword">Type your password</string>
    <string name="loginBtn">Login</string>
    <string name="yourProfile">Your profile</string>
    <string name="yourName">Your name</string>
    <string name="enterName">Enter your name</string>
    <string name="yourEmail">Your email</string>
    <string name="enterEmail">Enter your Email</string>
    <string name="yourpicture">Your picture</string>
    <string name="clickTheButtonAboveToTakeAPicture">Click the button above to take a picture</string>
    <string name="chatButton">Go to chat</string>
    <string name="BtnSend">SEND</string>
    <string name="BtnReceive">RECEIVE</string>
    <string name="RcvTextView">Received text</string>
    <string name="SentTextView">Sent Text</string>
    <string name="deleteMessae">Do you want to delete this?</string>
    <string name="rowMessage">The selected row is</string>
    <string name="datebaseid">The database id is</string>
    <string name="yesMessage">Yes</string>
    <string name="noMessage">no</string>
    <string name="currentTemp">Current Temparature</string>
    <string name="minTemp">Minimum Temparature</string>
    <string name="maxTemp">Maximum Temparature</string>
    <string name="uvRating">UV Rating</string>
    <string name="weatherButton">weather Forecast</string>
    <string name="searchItem">Search</string>
    <string name="emailItem">Email</string>
    <string name="globeItem">Globe</string>
    <string name="downloadItem">Download</string>
    <string name="chatPage">Chat Page</string>
    <string name="weatherPage">Weather Page</string>
    <string name="goBackPage">Go back to login</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>


