<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WeatherForecast"
    android:orientation="vertical">


<ImageView
     android:id="@+id/weatherIcon"
     android:layout_width="200dp"
     android:layout_height="200dp"
     tools:layout_editor_absoluteX="-13dp"
     tools:layout_editor_absoluteY="6dp" />

<TextView
     android:id="@+id/currentTemp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/currentTemp" />

<TextView
     android:id="@+id/minTemp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/minTemp" />

<TextView
     android:id="@+id/maxTemp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/maxTemp" />

<TextView
     android:id="@+id/uvRating"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/uvRating" />

 <ProgressBar
     android:id="@+id/progressBar"
     style="?android:attr/progressBarStyleHorizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:visibility="invisible" />


</LinearLayout>